test/conformance/chainsaw/validating-admission-policy-reports/background/validating-admission-policy-pass/deployment-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-pass
