test/conformance/chainsaw/validating-admission-policy-reports/background/validating-admission-policy-pass/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: deployment-pass
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
