test/conformance/chainsaw/validating-admission-policy-reports/background/validating-admission-policy-pass/01-deployment.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: deployment
spec:
  timeouts: {}
  try:
  - apply:
      file: deployment.yaml
  - assert:
      file: deployment-assert.yaml
  finally:
  - sleep:
      duration: 5s
